wikijs/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wikijs-mysql
  labels:
    app:  wikijs-mysql
spec:
  selector:
    matchLabels:
      app: wikijs-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app:  wikijs-mysql
    spec:
      containers:
      - name:  wikijs-mysql
        image:  mysql:latest # Image name from docker hub 
        ports: 
        - containerPort: 3306
      volumes: 
      - name: wikijs-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: wikijs-mysql-pv-claim
