wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wikijs
  labels:
    app:  wikijs
spec:
  selector:
    matchLabels:
      app: wikijs
  replicas: 1
  template:
    metadata:
      labels:
        app:  wikijs
    spec:
      containers:
      - name:  wikijs
        image: requarks/wiki:latest # Image name from docker hub 
        ports: 
        - containerPort: 3000
