wikijs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
spec:
  rules:
  - host: wiki.cloudops-17.ucll.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
